--- a/ampli-style.css
+++ b/ampli-style.css
@@ -10,9 +10,23 @@ header{
     align-items: center;
     margin: auto;
   }
+a{
+   transition: text-decoration-color 300ms;
+}
+a::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 0.1em;
+  background-color: black;
+  opacity: 0;
+  transition: opacity 300ms, transform 300ms;
+}
 a, a:link{
     color: black;
-    text-decoration: none;
+    text-decoration: underline 0.15em rgba(0, 0, 0, 0);
     height: 75px;
     margin-top: auto;
   }
@@ -21,7 +35,7 @@ a:visited, a:active{
   }
 a:hover{
     color:black;
-    text-decoration: underline;
+    text-decoration: underline 0.15em rgba(0, 0, 0, 1);
   }
 nav{
     height: 100%;
@@ -130,4 +144,67 @@ img#social-media{
     display: inline;
     height:25px;
     width:auto;
-}
+} 
+  .container {
+    display: flex;
+    height: 800px;
+    width: 75%;
+    background-image: url("/images/black-paper-background.png")
+  }
+  
+  .mySlides {
+    display: block;
+    margin: auto;
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+  
+
+  .cursor {
+    cursor: pointer;
+  }
+  
+  .prev,
+  .next {
+    cursor: pointer;
+    position: absolute;
+    width: auto;
+    background-color: rgba(0, 63, 122, 1);
+    padding: 16px;
+    color: skyblue;
+    font-weight: bold;
+    font-size: 20px;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    -webkit-user-select: none;
+  }
+  
+  .next {
+    right: 12.5%;
+    border-radius: 3px 0 0 3px;
+  }
+  
+  .prev:hover,
+  .next:hover {
+    background-color: rgba(0, 103, 199, 0.8);
+    color:skyblue;
+  }
+  
+  .numbertext {
+    color: white;
+    font-size: 48px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+  }
+  
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+
+  img.slideshow{
+    width: 50%;
+    height: 50%;
+  }
