--- a/ampli-style.css
+++ b/ampli-style.css
@@ -95,7 +95,7 @@ img.logo{
     position: relative;
 }
 main{
-    background-image: url("./images/notebook-background.png");
+    background-image: url("../images/notebook-background.png");
     background-size: 100%;
 }
 footer{
@@ -149,7 +149,7 @@ img#social-media{
     display: flex;
     height: 800px;
     width: 75%;
-    background-image: url("./images/black-paper-background.png")
+    background-image: url("../images/black-paper-background.png")
   }
   
   .mySlides {
