--- a/ampli-style.css
+++ b/ampli-style.css
@@ -98,6 +98,9 @@ main{
     background-image: url("images/notebook-background.png");
     background-size: 100%;
 }
+#main-content {
+  text-align: center;
+}
 footer{
     background-color: #D9D9D9;
     align-items: center;
