--- a/ampli-style.css
+++ b/ampli-style.css
@@ -72,6 +72,7 @@ body{
     text-align: justify;
     width: 75%;
   }
+  
 img{
     display: block;
     margin-left: auto;
@@ -100,6 +101,15 @@ main{
 }
 #main-content {
   text-align: center;
+  font-size: 48px;
+}
+ul {
+  list-style-type: disc;
+  padding-left: 20px; 
+  margin-left: auto; 
+  margin-right: auto;
+  width: fit-content;
+  text-align: left;
 }
 footer{
     background-color: #D9D9D9;
