--- a/ampli-style.css
+++ b/ampli-style.css
@@ -111,6 +111,11 @@ ul {
   width: fit-content;
   text-align: left;
 }
+ul li {
+  font-size: 1.5em;
+  margin: 5px 0; 
+  padding-left: 10px;
+}
 footer{
     background-color: #D9D9D9;
     align-items: center;
