--- a/ampli-style.css
+++ b/ampli-style.css
@@ -101,7 +101,10 @@ main{
 }
 #main-content {
   text-align: center;
-  font-size: 48px;
+  font-size: 24px;
+}
+#header-for-requirements {
+  font-size: 36px;
 }
 ul {
   list-style-type: disc;
