--- a/ampli-style.css
+++ b/ampli-style.css
@@ -106,6 +106,17 @@ main{
   text-align: center;
   font-size: 24px;
 }
+.fb-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100%; 
+}
+.fb-page {
+  width: 800px;
+  height: 650px;
+}
 
 ul {
   list-style-type: disc;
