--- a/ampli-style.css
+++ b/ampli-style.css
@@ -112,9 +112,13 @@ main{
   align-items: center;
   height: 100vh;
   width: 100%; 
+  max-width: 1200px;
+  height: 800px;
+  overflow: auto;
+  margin: 0 auto;
 }
 .fb-page {
-  width: 800px;
+  width: 1200px;
   height: 650px;
 }
 
