--- a/ampli-style.css
+++ b/ampli-style.css
@@ -116,10 +116,12 @@ main{
   height: 650px;
   overflow: auto;
   margin: 0 auto;
+  box-sizing: border-box;
 }
 .fb-page {
-  width: 1200px;
-  height: 650px;
+  max-width: 100%;
+  border: 1px solid #ccc;
+  border-radius: 8px;  
 }
 
 ul {
