--- a/ampli-style.css
+++ b/ampli-style.css
@@ -116,6 +116,12 @@ main{
   margin: 0 auto;
   box-sizing: border-box;
 }
+.fb-title {
+  margin: 0; 
+  padding: 0; 
+  font-size: 24px;
+  text-align: center;
+}
 .fb-page {
   margin: 0; 
 }
