--- a/ampli-style.css
+++ b/ampli-style.css
@@ -112,15 +112,8 @@ main{
   align-items: center;
   width: 1200px;
   height: 650px;
-  overflow: auto;
-  margin: 0 auto;
-  box-sizing: border-box;
-}
-.fb-title {
-  margin: 0; 
-  padding: 0; 
-  font-size: 24px;
-  text-align: center;
+  overflow: hidden;
+  margin: 0;
 }
 .fb-page {
   margin: 0; 
