--- a/ampli-style.css
+++ b/ampli-style.css
@@ -1,245 +1,253 @@
 h1{
-    text-align: center;
-    font-size: 400%;
-    display: block;
-    color: black;
-  }
+  text-align: center;
+  font-size: 400%;
+  display: block;
+  color: black;
+}
 header{
-    background-color: #D9D9D9;
-    position:static;
-    align-items: center;
-    margin: auto;
-  }
-  #header-for-requirements {
-    font-size: 36px;
-  }
+  background-color: #D9D9D9;
+  position:static;
+  align-items: center;
+  margin: auto;
+}
+#header-for-requirements {
+  font-size: 36px;
+}
 a{
-   transition: text-decoration-color 300ms;
+ transition: text-decoration-color 300ms;
 }
 a::after {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 0.1em;
-  background-color: black;
-  opacity: 0;
-  transition: opacity 300ms, transform 300ms;
+content: '';
+position: absolute;
+bottom: 0;
+left: 0;
+width: 100%;
+height: 0.1em;
+background-color: black;
+opacity: 0;
+transition: opacity 300ms, transform 300ms;
 }
 a, a:link{
-    color: black;
-    text-decoration: underline 0.15em rgba(0, 0, 0, 0);
-    height: 75px;
-    margin-top: auto;
-  }
+  color: black;
+  text-decoration: underline 0.15em rgba(0, 0, 0, 0);
+  height: 75px;
+  margin-top: auto;
+}
 a:visited, a:active{
-    color: black;
-  }
+  color: black;
+}
 a:hover{
-    color:black;
-    text-decoration: underline 0.15em rgba(0, 0, 0, 1);
-  }
+  color:black;
+  text-decoration: underline 0.15em rgba(0, 0, 0, 1);
+}
 nav{
-    height: 100%;
-    width: 100%;
-    font-size: 2.25em;
-    display: flex;
-    margin: auto;
-    justify-content: center;
-    align-content: center;
-    gap: 2.5%;
-  }
+  height: 100%;
+  width: 100%;
+  font-size: 2.25em;
+  display: flex;
+  margin: auto;
+  justify-content: center;
+  align-content: center;
+  gap: 2.5%;
+}
 div{
-    align-items: center;
-    height: auto;
-    width: auto;
-    display: block;
-    margin: auto;
-    margin-top: auto;
-    margin-left: auto;
-  }
+  align-items: center;
+  height: auto;
+  width: auto;
+  display: block;
+  margin: auto;
+  margin-top: auto;
+  margin-left: auto;
+}
 body{
-    margin:20px;
-    background-color: whitesmoke;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size:cover;
-    font-family:Petaluma Script;
-    color:black;
-    margin:0px;
-  } 
-  p{
-    font-size: 48px;
-    line-height: 140%;
-    text-align: justify;
-    width: 75%;
-  }
-  #centered-p{
-    text-align: center;
-  }
-  
+  margin:20px;
+  background-color: whitesmoke;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size:cover;
+  font-family:Petaluma Script;
+  color:black;
+  margin:0px;
+} 
+p{
+  font-size: 48px;
+  line-height: 140%;
+  text-align: justify;
+  width: 75%;
+}
+
+#centered-p{
+  text-align: center;
+}
+
 img{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-  }
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 img#cover{
-    height: auto;
-    width: 100%;
+  height: auto;
+  width: 100%;
 }
 img.logo{
-    height: 75px;
-    width: 75px;
-    margin: 0px;
-    margin-bottom: 0.5%
+  height: 75px;
+  width: 75px;
+  margin: 0px;
+  margin-bottom: 0.5%
 }
 .demo-wrap {
-    overflow: hidden;
-    position: relative;
+  overflow: hidden;
+  position: relative;
 }
 #content {
-    position: relative;
+  position: relative;
 }
 main{
-    background-image: url("images/notebook-background.png");
-    background-size: 100%;
+  background-image: url("images/notebook-background.png");
+  background-size: 100%;
 }
 #main-content {
-  text-align: center;
-  font-size: 24px;
+text-align: center;
+font-size: 24px;
 }
 .fb-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 1200px;
-  height: 650px;
-  overflow: hidden;
-  margin: 0;
+display: flex;
+justify-content: center;
+align-items: center;
+width: 1200px;
+height: 650px;
+overflow: hidden;
+margin: 0;
 }
 .fb-page {
-  margin: 0; 
+margin: 0; 
 }
 
 ul {
-  list-style-type: disc;
-  padding-left: 20px; 
-  margin-left: auto; 
-  margin-right: auto;
-  width: fit-content;
-  text-align: left;
+list-style-type: disc;
+padding-left: 20px; 
+margin-left: auto; 
+margin-right: auto;
+width: 75%;
+text-align: justify;
 }
+
 ul li {
-  font-size: 1.5em;
-  margin: 5px 0; 
-  padding-left: 10px;
+font-size: 50px;
+margin: 5px 0; 
+padding-left: 10px;
+
 }
 footer{
-    background-color: #D9D9D9;
-    align-items: center;
-    text-align: center;
-    display: block;
-    margin-right: auto;
-    margin-left: auto;
+  background-color: #D9D9D9;
+  align-items: center;
+  text-align: center;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
 }
 .organization img{
-    height:150px;
-    width: auto;
+  height:150px;
+  width: auto;
 }
 #wrapper{
-    display: flex;
-    height: 400px;
-    width: auto;
-    margin: 0px;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  height: 400px;
+  width: auto;
+  margin: 0px;
+  align-items: center;
+  justify-content: center;
 }
 #wrapper div{
-    height: 300px;
-    width: 400px;
-    margin: 0px;
-    align-items: center;
-    align-content: center;
+  height: 300px;
+  width: 400px;
+  margin: 0px;
+  align-items: center;
+  align-content: center;
 }
 #wrapper p{
-    font-size: 100%;
+  font-size: 100%;
 }
 #wrapper li{
-    display: inline;
+  display: inline;
 }
 .social-media ul {
-    list-style: none;
-    padding: 0;
-  }
-  
-.social-media li {
-    display: inline;
-    margin: 0 10px;
-  }
-img#social-media{
-    display: inline;
-    height:25px;
-    width:auto;
-} 
-  .container {
-    display: flex;
-    height: 800px;
-    width: 75%;
-    background-image: url("images/black-paper-background.png")
-  }
-  
-  .mySlides {
-    display: block;
-    margin: auto;
-    margin-top: auto;
-    margin-bottom: auto;
-  }
-  
+  list-style: none;
+  padding: 0;
+}
 
-  .cursor {
-    cursor: pointer;
-  }
-  
-  .prev,
-  .next {
-    cursor: pointer;
-    position: absolute;
-    width: auto;
-    background-color: rgba(0, 63, 122, 1);
-    padding: 16px;
-    color: skyblue;
-    font-weight: bold;
-    font-size: 20px;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-    -webkit-user-select: none;
-  }
-  
-  .next {
-    right: 12.5%;
-    border-radius: 3px 0 0 3px;
-  }
-  
-  .prev:hover,
-  .next:hover {
-    background-color: rgba(0, 103, 199, 0.8);
-    color:skyblue;
-  }
-  
-  .numbertext {
-    color: white;
-    font-size: 48px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0;
-  }
-  
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
+.social-media li {
+  display: inline;
+  margin: 0 10px;
+}
+img#social-media{
+  display: inline;
+  height:25px;
+  width:auto;
+} 
+.container {
+  display: flex;
+  height: 800px;
+  width: 75%;
+  background-image: url("images/black-paper-background.png")
+}
+
+.mySlides {
+  display: block;
+  margin: auto;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+
+.cursor {
+  cursor: pointer;
+}
+
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  width: auto;
+  background-color: rgba(0, 63, 122, 1);
+  padding: 16px;
+  color: skyblue;
+  font-weight: bold;
+  font-size: 20px;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  -webkit-user-select: none;
+}
+
+.next {
+  right: 12.5%;
+  border-radius: 3px 0 0 3px;
+}
+
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 103, 199, 0.8);
+  color:skyblue;
+}
+
+.numbertext {
+  color: white;
+  font-size: 48px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+img.slideshow{
+  width: 50%;
+  height: 50%;
+}
 
   img.slideshow{
     width: 50%;
