--- a/ampli-style.css
+++ b/ampli-style.css
@@ -129,7 +129,7 @@ padding-left: 20px;
 margin-left: auto; 
 margin-right: auto;
 width: 75%;
-text-align: justify;
+text-align: center;
 }
 
 ul li {
