--- a/ampli-style.css
+++ b/ampli-style.css
@@ -128,8 +128,8 @@ list-style-type: disc;
 padding-left: 20px; 
 margin-left: auto; 
 margin-right: auto;
-width: 75%;
-text-align: center;
+width: fit-content;
+text-align: left;
 }
 
 ul li {
