--- a/ampli-style.css
+++ b/ampli-style.css
@@ -340,4 +340,11 @@ img.slideshow{
     width: 100%; /* Full width for very small screens */
   }
 }
+.animated-image {
+    animation: bounce 2s infinite;
+  }
+@keyframes bounce {
+  0%, 100% { transform: translateY(0); }
+  50% { transform: translateY(-20px); }
+  }
 }
